add a Wrapping up section

--- a/slides/index.html
+++ b/slides/index.html
@@ -647,6 +647,88 @@ $ ./terraform destroy
                     </code></pre>
                 </section>
 
+                 <!-- What does this mean for you? -->
+                <section>
+                <section>
+                    <h3>Wrapping up</h3>
+                    <p>What does this mean for you guys embarking on a career in IT?</p>
+                </section>
+                <section>
+                    <h3>Software is eating the world</h3>
+                    <p>Software is eating the world. This includes the "old" IT world and hardware.</p>
+                </section>
+                <section>
+                    <h3>What does this mean for you?</h3>
+                    <p>Automate things!</p>
+                    <p>Learn automation tools and practices because they are at the heart of todays IT</p>
+                    <p>The types of automation you will be using will be largely dependent on the type of organisation you are working for</p>
+                    <p>You will need to be following software development workflows even if you are a sysdamin or network engineer</p>
+                </section>
+                <section>
+                    <h3>What does this mean for NZ?</h3>
+                    <p>No infrastructure in NZ and all our computing is done on AWS, Azure or Google Cloud Platform in Sydney?</p>
+                </section>
+                <section>
+                    <h3>Reasons why there will still be infrastructure in NZ</h3>
+                    <ul>
+                        <li>Inertia</li>
+                        <li>Local computation for local infrastructure</li>
+                        <li>Computation closer to the edge</li>
+                        <li>Latency</li>
+                        <li>Sovereignty</li>
+                        <li>Monopoly avoidance</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Greenfields vs. Legacy</h3>
+                    <p>Greenfields projects vs. supporting legacy systems</p>
+                </section>
+                <section>
+                    <h3>Public cloud usage</h3>
+                    <ul>
+                        <li>IaaS (using EC2 directly)</li>
+                        <li>CaaS (GCE Kubernetes, Openstack Magnum)</li>
+                        <li>PaaS (Openshift, Heroku)</li>
+                        <li>SaaS (Xero, Gmail, Office 365)</li>
+                        <li>Other services (Machine learning, blockchain etc. etc.)</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>What about containers?</h3>
+                    <p>Container are the future but the future is not evenly distributed. We will be dealing with non containerised workloads for many years yet.</p>
+                </section>
+                <section>
+                    <h3>What about Windows?</h3>
+                    <ul>
+                        <li>Traditional Windows Server administration is enforced Snowflake (point and click)</li>
+                        <li>Modern Windows Server administration looks more and more like Linux</li>
+                        <li>Windows Server Core</li>
+                        <li>WSL (Ubuntu bash on Windows 10)</li>
+                        <li>Powershell (used by Ansible for Windows)</li>
+                        <li>Docker on Windows</li>
+                        <li>Ansible for Windows</li>
+                        <li>SSHD on Windows</li>
+                        <li>SQL Server ported to Linux</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>What about Networking?</h3>
+                    <ul>
+                        <li>SDN</li>
+                        <li>NFV</li>
+                        <li>Ansible network modules</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Technologies to watch</h3>
+                    <ul>
+                        <li>OpenStack</li>
+                        <li>Ansible</li>
+                        <li>Kubernetes and the other COEs for running Docker</li>
+                    </ul>
+                </section>
+                </section>
+
         <script src="lib/js/head.min.js"></script>
         <script src="js/reveal.js"></script>
 
