move credentials section after Delete resources

--- a/slides/index.html
+++ b/slides/index.html
@@ -461,15 +461,6 @@ $ sudo chown -R root:root /usr/share/nginx/html/
                 </section>
 
                 <section>
-                    <h3>Tools clients and credentials</h3>
-                    <ul>
-                        <li><a href="http://docs.catalystcloud.io/getting-started.html#command-line-tools">http://docs.catalystcloud.io/getting-started.html#command-line-tools</a></li>
-                        <li>Install clients</li>
-                        <li>Source an OpenStack RC file</li>
-                    </ul>
-                </section>
-
-                <section>
                 <section>
                     <h3>Ansible in 5 minutes</h3>
                     <ul>
@@ -592,13 +583,23 @@ localhost                  : ok=6    changed=0    unreachable=0    failed=0
                 </section>
 
                 <section>
-                    <h3>Delete resources</h3>
+                    <h3>Delete resources using the dashboard</h3>
                     <ul>
                         <li>SSH Keypair</li>
                         <li>Secuity Group</li>
                         <li>Instance</li>
                     </ul>
                 </section>
+
+                <section>
+                    <h3>Tools clients and credentials</h3>
+                    <ul>
+                        <li><a href="http://docs.catalystcloud.io/getting-started.html#command-line-tools">http://docs.catalystcloud.io/getting-started.html#command-line-tools</a></li>
+                        <li>Install clients</li>
+                        <li>Source an OpenStack RC file</li>
+                    </ul>
+                </section>
+
                 <section>
                     <h3>Repeat webserver build using Ansible</h3>
                     <ul>
