--- a/slides/index.html
+++ b/slides/index.html
@@ -86,7 +86,8 @@
                 <section>
                     <h3>Aims</h3>
                     <ul>
-                        <li>Understand the basic features of the catalyst cloud so you can create your own website</li>
+                        <li>Understand what the "cloud" is</li>
+                        <li>Understand the basic features of the Catalyst Cloud so you can create your own website</li>
                         <li>Gain familiarity with the <a href="http://docs.catalystcloud.io/">Catalyst Cloud Documentation</a></li>
                         <li>Gain familiarity with software automation using <a href="https://www.ansible.com/">Ansible</a></li>
                     </ul>
@@ -123,6 +124,105 @@
                 <section>
                     <h3>Measured service</h3>
                     <p>Cloud systems automatically control and optimize resource use by leveraging a metering capability at some level of abstraction appropriate to the type of service (e.g., storage, processing, bandwidth, and active user accounts). Typically this is done on a pay-per-use or charge-per-use basis. Resource usage can be monitored, controlled, and reported, providing transparency for both the provider and consumer of the utilized service.</p>
+                </section>
+                </section>
+
+                <section>
+                <section>
+                    <h3>What is the cloud?</h3>
+                    <img src="img/die-cut-stickers.png" alt="There is no cloud">
+                </section>
+                <section>
+                    <h3>What is the cloud?</h3>
+                    <ul>
+                        <li>IaaS</li>
+                        <li>CaaS</li>
+                        <li>PaaS</li>
+                        <li>SaaS</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>What is the cloud?</h3>
+                    <img src="img/what-is-iaas.png" alt="Cloud services">
+                </section>
+                <section>
+                    <h3>IaaS</h3>
+                    <blockquote class="quotation-marks">
+                        Infrastructure as a Service (IaaS) is a form of cloud computing that provides virtualized computing resources over the Internet.  IaaS is one of three main categories of cloud computing services, alongside Software as a Service (SaaS) and Platform as a Service (PaaS).
+                    </blockquote>
+                </section>
+                <section>
+                    <h3>IaaS</h3>
+                    <ul>
+                        <li>AWS EC2</li>
+                        <li>Azure Virtual Machines</li>
+                        <li>Google Compute Engine</li>
+                        <li>Rackspace</li>
+                        <li>OpenStack</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>CaaS</h3>
+                    <blockquote class="quotation-marks">
+                        Containers as a service (CaaS) is a form of container-based virtualization in which container engines, orchestration and the underlying compute resources are delivered to users as a service from a cloud provider.
+                    </blockquote>
+                </section>
+                <section>
+                    <h3>CaaS</h3>
+                    <ul>
+                        <li>Google Container Engine (Kubernetes)</li>
+                        <li>Amazon EC2 Container Service</li>
+                        <li>Azure Container Service</li>
+                        <li>OpenStack Magnum (Kubernetes, Docker Swarm, Mesos)</li>
+                        <li>Built on top of a Container Orchestration Engine</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>PaaS</h3>
+                    <blockquote class="quotation-marks">
+                        Platform as a service (PaaS) is a cloud computing model that delivers applications over the Internet. In a PaaS model, a cloud provider delivers hardware and software tools -- usually those needed for application development -- to its users as a service. A PaaS provider hosts the hardware and software on its own infrastructure. As a result, PaaS frees users from having to install in-house hardware and software to develop or run a new application.
+                    </blockquote>
+                </section>
+                <section>
+                    <h3>PaaS</h3>
+                    <ul>
+                        <li>Heroku</li>
+                        <li>AWS Elastic Beanstalk</li>
+                        <li>Google App Engine</li>
+                        <li>Azure App Service</li>
+                        <li>OpenShift</li>
+                        <li>CloudFoundary</li>
+                        <li>Often built on top of a Container Orchestration Engine</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>SaaS</h3>
+                    <blockquote class="quotation-marks">
+                        Software as a service (SaaS) is a software distribution model in which a third-party provider hosts applications and makes them available to customers over the Internet. SaaS is one of three main categories of cloud computing, alongside infrastructure as a service (IaaS) and platform as a service (PaaS).
+                    </blockquote>
+                </section>
+                <section>
+                    <h3>SaaS</h3>
+                    <ul>
+                        <li>Office 365</li>
+                        <li>Google Apps</li>
+                        <li>Xero</li>
+                        <li>Dropbox</li>
+                        <li>Slack</li>
+                        <li>Often built on top IaaS or CaaS</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Cloud Platforms</h3>
+                    <p>
+                        The big three provide services across IaaS/CaaS/PaaS on their Cloud Platforms. SaaS services are not generally made available as part of the cloud platform.
+                    </p>
+                    <ul>
+                        <li><a href="https://aws.amazon.com/products/">AWS</a></li>
+                        <li><a href="https://azure.microsoft.com/en-us/services/">Azure</a></li>
+                        <li><a href="https://cloud.google.com/products/">Google Cloud Platform</a></li>
+                        <li><a href="https://www.openstack.org/software/project-navigator/">OpenStack</a></li>
+                    </ul>
                 </section>
                 </section>
 
@@ -257,7 +357,7 @@ SSH_KEY_NAME="yourname-first-instance-key"
 INSTANCE_NAME="yourname-first-instance"
 SECURITY_GROUP_NAME="yourname-first-instance-sg"
 FLAVOR_NAME="c1.c1r1"
-IMAGE_NAME="ubuntu-14.04-x86_64"
+IMAGE_NAME="ubuntu-16.04-x86_64"
                     </code></pre>
                 </section>
 
@@ -331,8 +431,8 @@ $ cat ~/.ssh/id_rsa.pub | xclip
                 <section>
                     <h3>Commands 1</h3>
                     <pre><code data-trim contenteditable>
-$ wget https://github.com/spf13/hugo/releases/download/v0.16/hugo_0.16-1_amd64.deb
-$ sudo dpkg -i hugo_0.16-1_amd64.deb
+$ wget https://github.com/gohugoio/hugo/releases/download/v0.25.1/hugo_0.25.1_Linux-64bit.deb
+$ sudo dpkg -i hugo_0.25.1_Linux-64bit.deb
 $ hugo new site foobar
 $ cd foobar/
 $ hugo new post/first-post.md
@@ -384,9 +484,16 @@ $ scp -r public/ ubuntu@103.254.156.118:
 $ ssh ubuntu@150.242.42.156
 $ sudo apt-get install nginx
 $ cd public
-$ sudo mv * /usr/share/nginx/html/
-$ sudo chown -R root:root /usr/share/nginx/html/
+$ sudo mv * /var/www/html
+$ sudo chown -R root:root /var/www/html
                     </code></pre>
+                </section>
+
+                <section>
+                    <h3>Visit your site</h3>
+                    <p>
+                        <a href="http://train01.gamma.net.nz">http://train01.gamma.net.nz</a>
+                    </p>
                 </section>
 
                 </section>
@@ -594,16 +701,19 @@ localhost                  : ok=6    changed=0    unreachable=0    failed=0
                 <section>
                     <h3>Tools clients and credentials</h3>
                     <ul>
-                        <li><a href="http://docs.catalystcloud.io/getting-started.html#command-line-tools">http://docs.catalystcloud.io/getting-started.html#command-line-tools</a></li>
-                        <li>Install clients</li>
+                        <li><a href="http://docs.catalystcloud.io/getting-started/cli.html#source-an-openstack-rc-file">http://docs.catalystcloud.io/getting-started/cli.html#source-an-openstack-rc-file</a></li>
                         <li>Source an OpenStack RC file</li>
                     </ul>
+                    <pre><code data-trim contenteditable>
+$ source ~/Downloads/os-training.catalyst.net.nz-openrc.sh
+$ env | grep OS_
+                    </code></pre>
                 </section>
 
                 <section>
                     <h3>Repeat webserver build using Ansible</h3>
                     <ul>
-                        <li><a href="http://docs.catalystcloud.io/first-instance.html#launching-your-first-instance-using-ansible">http://docs.catalystcloud.io/first-instance.html#launching-your-first-instance-using-ansible</a></li>
+                        <li><a href="http://docs.catalystcloud.io/first-instance/ansible.html">http://docs.catalystcloud.io/first-instance/ansible.html</a></li>
                         <li>Clone catalystcloud-ansible repo</li>
                         <li>Install Ansible</li>
                         <li>Edit example-playbooks/sot-masterclass playbook</li>
@@ -614,23 +724,11 @@ localhost                  : ok=6    changed=0    unreachable=0    failed=0
                     <h3>Exercises</h3>
                     <ul>
                         <li>Redo something you have not fully completed</li>
+                        <li>Try and write a playbook that terminates you instance, security group and keypair</li>
                         <li>Have a go at one of the example playbooks in the <a href="https://github.com/catalyst/catalystcloud-ansible">Ansible Repo</a></li>
                         <li>Have a go at setting up your first instance using the command line</li>
                         <li>Have a go at setting up your first instance using heat</li>
-                        <li>Have a go at setting up your first instance using python (see next slide)</li>
                         <li>Have a go at setting up your first instance using terraform (see upcoming slide)</li>
-                    </ul>
-                </section>
-
-                <section>
-                    <h3>First Instance using a Python SDK</h3>
-                    <ul>
-                        <li><a href="http://docs.catalystcloud.io/first-instance.html#launching-your-first-instance-using-a-sdk">http://docs.catalystcloud.io/first-instance.html#launching-your-first-instance-using-a-sdk</a></li>
-                        <li>Install libcloud</li>
-                        <li>Setup the networks and router manually</li>
-                        <li>keypair_name = 'yourname-first-instance-key'</li>
-                        <li>security_group_name = 'yourname-first-instance'</li>
-                        <li>instance_name = 'yourname-first-instance'</li>
                     </ul>
                 </section>
 
@@ -683,16 +781,6 @@ $ ./terraform destroy
                 <section>
                     <h3>Greenfields vs. Legacy</h3>
                     <p>Greenfields projects vs. supporting legacy systems</p>
-                </section>
-                <section>
-                    <h3>Public cloud usage</h3>
-                    <ul>
-                        <li>IaaS (using EC2 directly)</li>
-                        <li>CaaS (GCE Kubernetes, Openstack Magnum)</li>
-                        <li>PaaS (Openshift, Heroku)</li>
-                        <li>SaaS (Xero, Gmail, Office 365)</li>
-                        <li>Other services (Machine learning, blockchain etc. etc.)</li>
-                    </ul>
                 </section>
                 <section>
                     <h3>What about containers?</h3>
